--- a/index.html
+++ b/index.html
@@ -3,158 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="MimFlix - আপনার পছন্দের স্ট্রিমিং প্ল্যাটফর্ম। বাংলা এবং ইংরেজিতে সিনেমা, IPTV, ভিডিও, নিউজ এবং ব্লগ সবকিছু এক জায়গায়।">
-    <meta name="keywords" content="MimFlix, Streaming, Movies, IPTV, Blogs, Videos, Entertainment, Mim Flix, স্ট্রিমিং, মুভি, আইপিটিভি, ব্লগ, ভিডিও">
+    <meta name="description" content="MimFlix - Stream your favorite Movies, IPTV, Videos, and more anytime, anywhere.">
+    <meta name="keywords" content="MimFlix, Movies, IPTV, Blogs, Videos, Entertainment">
     <meta name="author" content="MimFlix Team">
-    <meta property="og:title" content="MimFlix - Stream Your Favorites in Bangla & English">
-    <meta property="og:description" content="Enjoy Movies, IPTV, News, and more on MimFlix. Stream Anytime, Anywhere. আপনার পছন্দের সবকিছু স্ট্রিমিং এক জায়গায়।">
-    <meta property="og:image" content="https://example.com/mimflix-logo.jpg">
-    <meta property="og:url" content="https://github.com/MimFlix/MimFlix">
+    
+    <!-- Open Graph meta tags -->
+    <meta property="og:title" content="MimFlix - Stream Anytime, Anywhere">
+    <meta property="og:description" content="Watch Movies, IPTV, Videos, and stay updated with the latest blogs at MimFlix.">
+    <meta property="og:image" content="images/banner.jpg">
+    <meta property="og:url" content="https://www.mimflix.com">
     <meta property="og:type" content="website">
-    <title>MimFlix - Stream Anytime, Anywhere</title>
+    <meta property="og:locale" content="en_BD">
+    <meta property="og:site_name" content="MimFlix">
 
-    <!-- Import Libraries -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!-- Twitter Card meta tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="MimFlix - Stream Anytime, Anywhere">
+    <meta name="twitter:description" content="Enjoy Movies, IPTV, and more at MimFlix.">
+    <meta name="twitter:image" content="images/banner.jpg">
+
+    <title>MimFlix - Stream Anytime, Anywhere</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="images/favicon.ico">
 </head>
 <body>
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-black shadow">
+    <nav class="navbar">
         <div class="container">
-            <a class="navbar-brand fw-bold text-primary" href="#">
-                <i class="fa fa-film me-2"></i>MimFlix
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#movies"><i class="fa fa-film me-2"></i>মুভি</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#iptv"><i class="fa fa-tv me-2"></i>IPTV</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#videos"><i class="fa fa-video me-2"></i>ভিডিও</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#blogs"><i class="fa fa-blog me-2"></i>ব্লগ</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#partners"><i class="fa fa-handshake me-2"></i>পার্টনার</a>
-                    </li>
-                </ul>
-            </div>
+            <a href="/" class="navbar-brand">MimFlix</a>
+            <ul class="nav-links">
+                <li><a href="movies/index.html">Movies</a></li>
+                <li><a href="iptv/index.html">IPTV</a></li>
+                <li><a href="blogs/index.html">Blogs</a></li>
+            </ul>
         </div>
     </nav>
 
     <!-- Hero Section -->
-    <header class="text-center py-5 bg-gradient">
+    <header class="hero">
         <div class="container">
-            <h1 class="display-3 fw-bold animate__animated animate__fadeInDown text-primary">
-                MimFlix: <span class="text-light">Stream Anytime, Anywhere</span>
-            </h1>
-            <p class="lead animate__animated animate__fadeInUp">
-                আপনার পছন্দের সিনেমা, IPTV, ভিডিও, ব্লগ এবং অনেক কিছু এক জায়গায়।
-            </p>
-            <a href="#movies" class="btn btn-primary btn-lg me-2 animate__animated animate__bounceIn">
-                <i class="fa fa-play-circle me-2"></i>মুভি দেখুন
-            </a>
-            <a href="#iptv" class="btn btn-outline-light btn-lg animate__animated animate__bounceIn">
-                <i class="fa fa-tv me-2"></i>IPTV দেখুন
-            </a>
+            <h1 class="hero-title">MimFlix: Stream Anytime, Anywhere</h1>
+            <p class="hero-description">Stream Movies, IPTV, Videos, and more at MimFlix.</p>
+            <div class="buttons">
+                <a href="movies/index.html" class="btn-primary">Watch Movies</a>
+                <a href="iptv/index.html" class="btn-outline">Access IPTV</a>
+            </div>
         </div>
     </header>
 
-    <!-- Content Sections -->
-    <div class="container py-5">
-
-        <!-- Movies Section -->
-        <section id="movies">
-            <h2 class="text-center text-light mb-4"><i class="fa fa-film me-2"></i>মুভি</h2>
-            <div class="row g-4">
-                <!-- Movie Cards -->
-                <div class="col-md-4">
-                    <div class="card bg-dark text-light shadow-sm">
-                        <img src="movies/movie1.jpg" class="card-img-top" alt="Movie 1">
-                        <div class="card-body">
-                            <h5 class="card-title">মুভি টাইটেল ১</h5>
-                            <p class="card-text">মুভির একটি সংক্ষিপ্ত বিবরণ।</p>
-                            <a href="#" class="btn btn-primary">দেখুন এখন</a>
-                        </div>
-                    </div>
-                </div>
-                <!-- Add more movie cards here as needed -->
-            </div>
-        </section>
-
-        <!-- IPTV Section -->
-        <section id="iptv" class="mt-5">
-            <h2 class="text-center text-light mb-4"><i class="fa fa-tv me-2"></i>IPTV</h2>
-            <p class="text-center">লাইভ টিভি দেখুন আপনার পছন্দ মতো।</p>
-            <div class="text-center">
-                <a href="iptv/" class="btn btn-success">
-                    <i class="fa fa-play-circle me-2"></i>Access IPTV
-                </a>
-            </div>
-        </section>
-
-        <!-- Videos Section -->
-        <section id="videos" class="mt-5">
-            <h2 class="text-center text-light mb-4"><i class="fa fa-video me-2"></i>ভিডিও</h2>
-            <p class="text-center">Explore short videos curated just for you.</p>
-            <div class="text-center">
-                <a href="videos/" class="btn btn-primary">
-                    <i class="fa fa-play-circle me-2"></i>Watch Videos
-                </a>
-            </div>
-        </section>
-
-        <!-- Blogs Section -->
-        <section id="blogs" class="mt-5">
-            <h2 class="text-center text-light mb-4"><i class="fa fa-blog me-2"></i>ব্লগ</h2>
-            <p class="text-center">Stay updated with the latest blog posts on entertainment.</p>
-            <div class="text-center">
-                <a href="blogs/" class="btn btn-info">
-                    <i class="fa fa-pencil-alt me-2"></i>Read Blogs
-                </a>
-            </div>
-        </section>
-    </div>
-
-    <!-- Partners Section -->
-    <section id="partners" class="py-5">
-        <div class="container">
-            <h2 class="text-center text-light mb-4">Our Partners</h2>
-            <div class="row justify-content-center">
-                <div class="col-3">
-                    <img src="partners/partner1.png" alt="Partner 1" class="img-fluid">
-                </div>
-                <div class="col-3">
-                    <img src="partners/partner2.png" alt="Partner 2" class="img-fluid">
-                </div>
-                <div class="col-3">
-                    <img src="partners/partner3.png" alt="Partner 3" class="img-fluid">
-                </div>
-            </div>
-        </div>
-    </section>
-
     <!-- Footer -->
-    <footer class="bg-black text-center text-light py-4">
-        <p>&copy; 2024 MimFlix - All Rights Reserved</p>
-        <div>
-            <a href="#" class="text-light me-3"><i class="fa fa-facebook"></i></a>
-            <a href="#" class="text-light me-3"><i class="fa fa-twitter"></i></a>
-            <a href="#" class="text-light"><i class="fa fa-instagram"></i></a>
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 MimFlix. All Rights Reserved.</p>
+            <div class="social-links">
+                <a href="#" class="social-icon">Facebook</a>
+                <a href="#" class="social-icon">Twitter</a>
+                <a href="#" class="social-icon">Instagram</a>
+            </div>
         </div>
     </footer>
 
-    <!-- Scripts -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
