--- a/ftp/index.html
+++ b/ftp/index.html
@@ -1,55 +1,85 @@
-<!DOCTYPE html>
-<html lang="en">
+﻿<!DOCTYPE html>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FTP File Manager</title>
-    <style>
-        body { font-family: Arial, sans-serif; margin: 20px; }
-        h1 { color: #333; }
-        ul { list-style-type: none; padding: 0; }
-        li { margin: 10px 0; }
-        a { color: #007bff; text-decoration: none; }
-        .file-details { font-size: 0.9em; color: #555; }
-        .folder { font-weight: bold; }
-    </style>
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<title>File Manager</title>
+<link rel="stylesheet" type="text/css" href="styles/reset.css" />
+<link rel="stylesheet" type="text/css" href="scripts/jquery.filetree/jqueryFileTree.css" />
+<link rel="stylesheet" type="text/css" href="scripts/jquery.contextmenu/jquery.contextMenu-1.01.css" />
+<link rel="stylesheet" type="text/css" href="scripts/custom-scrollbar-plugin/jquery.mCustomScrollbar.min.css" />
+<style type="text/css">
+	#loading-wrap {
+		position:fixed;
+		height:100%;
+		width:100%;
+		overflow:hidden;
+		top:0;
+		left:0;
+		display:block;
+		background: white url(./images/wait30trans.gif) no-repeat center center;
+		z-index:999;
+	}
+</style>
+
+<!-- CSS dynamically added using 'config.options.theme' defined in config file -->
 </head>
 <body>
-    <h1>FTP File Manager</h1>
-    <div id="file-list">
-        <!-- File and folder list will be dynamically inserted here -->
-    </div>
+<div id="loading-wrap"><!-- loading wrapper / removed when loaded --></div>
+<div>
+<form id="uploader" method="post">
+	<h1></h1>
+	<div id="uploadresponse"></div>
+	<button id="level-up" name="level-up" type="button" value="LevelUp">&nbsp;</button>
+	<button id="home" name="home" type="button" value="Home">&nbsp;</button>
+	<input id="mode" name="mode" type="hidden" value="add" /> 
+	<input id="currentpath" name="currentpath" type="hidden" />
+	<div id="file-input-container">
+		<div id="alt-fileinput">
+			<input id="filepath" name="filepath" type="text" /><button id="browse" name="browse" type="button" value="Browse"></button>
+		</div>
+		<input	id="newfile" name="newfile" type="file" />
+	</div>
+	<button id="upload" name="upload" type="submit" value="Upload" class="em"></button>
+	<button id="newfolder" name="newfolder" type="button" value="New Folder" class="em"></button>
+	<button id="grid" class="ON" type="button">&nbsp;</button>
+	<button id="list" type="button">&nbsp;</button>
+</form>
+<div id="splitter">
+<div id="filetree"></div>
+	<div id="fileinfo">
+	<h1></h1>
+	</div>
+</div>
+<div id="footer">
+<form name="search" id="search" method="get">
+		<div>
+			<input type="text" value="" name="q" id="q" />
+			<a id="reset" href="#" class="q-reset"></a>
+			<span class="q-inactive"></span>
+		</div> 
+</form>
+<a href="" id="link-to-project"></a>
+<div id="folder-info"></div>
+</div>
 
-    <script>
-        // Fetch the list of files and folders from the backend
-        fetch('/api/ftp-files')  // Backend endpoint to get files and folders
-            .then(response => response.json())
-            .then(data => {
-                const fileListContainer = document.getElementById('file-list');
-                data.forEach(item => {
-                    const listItem = document.createElement('li');
+<ul id="itemOptions" class="contextMenu">
+	<li class="select"><a href="#select"></a></li>
+	<li class="download"><a href="#download"></a></li>
+	<li class="rename"><a href="#rename"></a></li>
+	<li class="move"><a href="#move"></a></li>
+	<li class="replace"><a href="#replace"></a></li>
+	<li class="delete separator"><a href="#delete"></a></li>
+</ul>
 
-                    if (item.type === 'folder') {
-                        // If the item is a folder, display it as a link
-                        listItem.innerHTML = `
-                            <span class="folder">Folder: </span>
-                            <a href="/ftp/${item.path}" target="_blank">${item.name}</a>
-                        `;
-                    } else {
-                        // If the item is a file, display its details
-                        listItem.innerHTML = `
-                            <span>File: </span>
-                            <a href="/ftp/${item.path}" download="${item.name}">${item.name}</a>
-                            <div class="file-details">
-                                Size: ${item.size} bytes | Last Modified: ${item.lastModified}
-                            </div>
-                        `;
-                    }
-
-                    fileListContainer.appendChild(listItem);
-                });
-            })
-            .catch(error => console.error('Error fetching FTP files:', error));
-    </script>
+<script type="text/javascript" src="scripts/jquery-1.11.3.min.js"></script>
+<script type="text/javascript" src="scripts/jquery-browser.js"></script>
+<script type="text/javascript" src="scripts/jquery.form-3.24.js"></script>
+<script type="text/javascript" src="scripts/jquery.splitter/jquery.splitter-1.5.1.js"></script>
+<script type="text/javascript" src="scripts/jquery.filetree/jqueryFileTree.js"></script>
+<script type="text/javascript" src="scripts/jquery.contextmenu/jquery.contextMenu-1.01.js"></script>
+<script type="text/javascript" src="scripts/jquery.impromptu-3.2.min.js"></script>
+<script type="text/javascript" src="scripts/jquery.tablesorter-2.7.2.min.js"></script>
+<script type="text/javascript" src="scripts/filemanager.min.js"></script>
+</div>
 </body>
 </html>
