--- a/index.html
+++ b/index.html
@@ -1,40 +1,338 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="bn">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Stream movies, IPTV, blogs, and more with MimFlix.">
-    <meta name="keywords" content="Movies, IPTV, Blogs, Streaming, Entertainment">
-    <meta name="author" content="MimFlix Team">
-    <title>MimFlix - Stream Movies, IPTV & Blogs</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="icon" href="images/favicon.ico">
+    <title>MimFlix - মনোরঞ্জন প্ল্যাটফর্ম | Entertainment Platform</title>
+    <link rel="icon" href="./logo.svg" type="image/svg+xml">
+    <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300;400;500;700&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/17.0.2/umd/react.development.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/17.0.2/umd/react-dom.development.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react-router-dom/5.2.0/react-router-dom.min.js"></script>
 </head>
 <body>
-    <header class="bg-dark text-white p-3">
-        <div class="container d-flex justify-content-between align-items-center">
-            <img src="images/logo.svg" alt="MimFlix Logo" width="50">
-            <nav>
-                <a href="movies/index.html" class="text-white mx-2">Movies</a>
-                <a href="iptv/index.html" class="text-white mx-2">IPTV</a>
-                <a href="blogs/index.html" class="text-white mx-2">Blogs</a>
-                <a href="ftp/index.html" class="text-white mx-2">FTP</a>
-            </nav>
-        </div>
-    </header>
-    <main class="container my-5 text-center">
-        <h1>Welcome to MimFlix</h1>
-        <p>Your ultimate entertainment hub for Movies, IPTV, and Blogs.</p>
-    </main>
-    <footer class="bg-dark text-white text-center py-3">
-        <p>&copy; 2024 MimFlix. All Rights Reserved.</p>
-        <div>
-            <a href="#" class="text-white mx-2"><i class="fa fa-facebook"></i></a>
-            <a href="#" class="text-white mx-2"><i class="fa fa-twitter"></i></a>
-            <a href="#" class="text-white mx-2"><i class="fa fa-instagram"></i></a>
-        </div>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <div id="root"></div>
+
+    <script type="text/babel">
+        const { BrowserRouter, Switch, Route, Link } = ReactRouterDOM;
+
+        // Multilingual Content
+        const LANG = {
+            bn: {
+                home: 'হোম',
+                movies: 'সিনেমা',
+                blogs: 'ব্লগ',
+                iptv: 'আইপিটিভি',
+                welcome: 'মিমফ্লিক্সে স্বাগতম',
+                description: 'আপনার সেরা মনোরঞ্জন গন্তব্য',
+            },
+            en: {
+                home: 'Home',
+                movies: 'Movies',
+                blogs: 'Blogs',
+                iptv: 'IPTV',
+                welcome: 'Welcome to MimFlix',
+                description: 'Your ultimate entertainment destination',
+            }
+        };
+
+        // Color Palette
+        const COLORS = {
+            primary: '#4a148c',
+            secondary: '#ff4081',
+            background: '#121212',
+            text: '#ffffff',
+            accent: '#7c4dff',
+        };
+
+        // Icons Component (Simulated)
+        const Icons = {
+            Home: () => '🏠',
+            Movie: () => '🎬',
+            Blog: () => '📝',
+            TV: () => '📺',
+            Menu: () => '≡',
+            Search: () => '🔍',
+            Language: () => '🌐',
+        };
+
+        // Main App Component
+        const App = () => {
+            const [language, setLanguage] = React.useState('en');
+            const [activeSection, setActiveSection] = React.useState('home');
+            const [menuOpen, setMenuOpen] = React.useState(false);
+
+            const toggleLanguage = () => {
+                setLanguage(language === 'en' ? 'bn' : 'en');
+            };
+
+            const currentLang = LANG[language];
+
+            return (
+                <BrowserRouter>
+                    <div className="app-container" style={{ backgroundColor: COLORS.background }}>
+                        {/* App Bar with Dropdown Menu */}
+                        <header className="app-bar">
+                            <div className="app-bar-content">
+                                <div className="logo-section">
+                                    <img src="./logo.svg" alt="MimFlix Logo" className="app-logo" />
+                                    <h1 style={{ color: COLORS.secondary }}>MimFlix</h1>
+                                </div>
+
+                                <div className="navigation-section">
+                                    <button 
+                                        className="menu-toggle"
+                                        onClick={() => setMenuOpen(!menuOpen)}
+                                    >
+                                        {Icons.Menu()}
+                                    </button>
+
+                                    {menuOpen && (
+                                        <div className="dropdown-menu">
+                                            <Link 
+                                                to="/" 
+                                                className="nav-link"
+                                                onClick={() => {
+                                                    setActiveSection('home');
+                                                    setMenuOpen(false);
+                                                }}
+                                            >
+                                                {Icons.Home()} {currentLang.home}
+                                            </Link>
+                                            <Link 
+                                                to="/movies" 
+                                                className="nav-link"
+                                                onClick={() => {
+                                                    setActiveSection('movies');
+                                                    setMenuOpen(false);
+                                                }}
+                                            >
+                                                {Icons.Movie()} {currentLang.movies}
+                                            </Link>
+                                            <Link 
+                                                to="/blogs" 
+                                                className="nav-link"
+                                                onClick={() => {
+                                                    setActiveSection('blogs');
+                                                    setMenuOpen(false);
+                                                }}
+                                            >
+                                                {Icons.Blog()} {currentLang.blogs}
+                                            </Link>
+                                            <Link 
+                                                to="/iptv" 
+                                                className="nav-link"
+                                                onClick={() => {
+                                                    setActiveSection('iptv');
+                                                    setMenuOpen(false);
+                                                }}
+                                            >
+                                                {Icons.TV()} {currentLang.iptv}
+                                            </Link>
+                                        </div>
+                                    )}
+
+                                    <button 
+                                        className="language-toggle"
+                                        onClick={toggleLanguage}
+                                    >
+                                        {Icons.Language()} {language === 'en' ? 'bn' : 'en'}
+                                    </button>
+                                </div>
+                            </div>
+                        </header>
+
+                        {/* Routing Content */}
+                        <main className="content-section">
+                            <Switch>
+                                <Route exact path="/">
+                                    <HomePage language={language} />
+                                </Route>
+                                <Route path="/movies">
+                                    <MoviesPage language={language} />
+                                </Route>
+                                <Route path="/blogs">
+                                    <BlogsPage language={language} />
+                                </Route>
+                                <Route path="/iptv">
+                                    <IPTVPage language={language} />
+                                </Route>
+                            </Switch>
+                        </main>
+
+                        {/* Footer */}
+                        <footer className="app-footer" style={{ backgroundColor: COLORS.primary }}>
+                            <p>© 2024 MimFlix. All Rights Reserved.</p>
+                        </footer>
+                    </div>
+                </BrowserRouter>
+            );
+        };
+
+        // Individual Page Components
+        const HomePage = ({ language }) => {
+            const currentLang = LANG[language];
+            return (
+                <div className="home-page animate-fade-in">
+                    <h2 style={{ color: COLORS.secondary }}>{currentLang.welcome}</h2>
+                    <p>{currentLang.description}</p>
+                </div>
+            );
+        };
+
+        const MoviesPage = ({ language }) => {
+            const currentLang = LANG[language];
+            return (
+                <div className="movies-page animate-slide-up">
+                    <h2>{currentLang.movies}</h2>
+                    {/* Add movie content */}
+                </div>
+            );
+        };
+
+        const BlogsPage = ({ language }) => {
+            const currentLang = LANG[language];
+            return (
+                <div className="blogs-page animate-slide-up">
+                    <h2>{currentLang.blogs}</h2>
+                    {/* Add blog content */}
+                </div>
+            );
+        };
+
+        const IPTVPage = ({ language }) => {
+            const currentLang = LANG[language];
+            return (
+                <div className="iptv-page animate-slide-up">
+                    <h2>{currentLang.iptv}</h2>
+                    {/* Add IPTV content */}
+                </div>
+            );
+        };
+
+        // Render the App
+        ReactDOM.render(<App />, document.getElementById('root'));
+    </script>
+
+    <style>
+        :root {
+            --primary-color: #4a148c;
+            --secondary-color: #ff4081;
+            --background-color: #121212;
+            --text-color: #ffffff;
+        }
+
+        body, html {
+            margin: 0;
+            padding: 0;
+            font-family: 'Roboto', 'Hind Siliguri', sans-serif;
+            background-color: var(--background-color);
+            color: var(--text-color);
+            line-height: 1.6;
+        }
+
+        .app-container {
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+        }
+
+        .app-bar {
+            background-color: rgba(0,0,0,0.8);
+            padding: 15px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+        }
+
+        .app-bar-content {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            width: 100%;
+        }
+
+        .logo-section {
+            display: flex;
+            align-items: center;
+        }
+
+        .app-logo {
+            max-height: 50px;
+            margin-right: 15px;
+        }
+
+        .navigation-section {
+            display: flex;
+            align-items: center;
+        }
+
+        .dropdown-menu {
+            position: absolute;
+            top: 100%;
+            right: 0;
+            background-color: var(--primary-color);
+            border-radius: 10px;
+            padding: 10px;
+            display: flex;
+            flex-direction: column;
+            min-width: 200px;
+        }
+
+        .nav-link {
+            color: white;
+            text-decoration: none;
+            padding: 10px;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .nav-link:hover {
+            background-color: rgba(255,255,255,0.1);
+        }
+
+        .content-section {
+            flex-grow: 1;
+            padding: 20px;
+        }
+
+        .app-footer {
+            text-align: center;
+            padding: 15px;
+        }
+
+        /* Animations */
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+
+        @keyframes slideUp {
+            from { transform: translateY(20px); opacity: 0; }
+            to { transform: translateY(0); opacity: 1; }
+        }
+
+        .animate-fade-in {
+            animation: fadeIn 0.5s ease-out;
+        }
+
+        .animate-slide-up {
+            animation: slideUp 0.5s ease-out;
+        }
+
+        .menu-toggle, .language-toggle {
+            background: none;
+            border: none;
+            color: white;
+            font-size: 24px;
+            cursor: pointer;
+            margin-left: 15px;
+        }
+    </style>
 </body>
 </html>
